# TP-Taller-II-API-Gateway

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  bandit.yaml  docker-compose.yaml  heroku-Dockerfile  heroku.yml  main.py  noxfile.py  pylintrc  pyproject.toml  setup.cfg
.github/workflows/: bandit.yml  linters.yml  tests.yml
api_gateway/: __init__.py  api.py  app.py  manage.py  models.py  settings_sample.ini
api_gateway/clients/: auth_server_client.py  course_client.py  payment_client.py
api_gateway/namespaces/: __init__.py  namespace.py
api_gateway/namespaces/course/: namespace.py
api_gateway/namespaces/courses/: namespace.py
api_gateway/namespaces/default/: namespace.py
api_gateway/namespaces/payments/: namespace.py
api_gateway/namespaces/status/: namespace.py
api_gateway/namespaces/user/: namespace.py
docker-compose/: api-entrypoint.sh  docker-compose.yaml
heroku/: heroku-entrypoint.sh
tests/: test_api.py
