[tool.poetry]
name = "api_gateway"
version = "0.1.0"
description = "API Gateway para el trabajo practico de Taller de Programacion II"
authors = ["Fedacking <fgauna@fi.uba.ar>"]

[tool.poetry.dependencies]
python = "^3.7"
astroid = "<2.5"
argparse = "^1.4.0"
importlib-metadata = {version = "^1.0", python = "<3.8"}
pytest = {version = "^6.1.0", optional = true}
pytest-cov = {version = "^2.10.1", optional = true}
pytest-xdist = {version = "^2.1.0", optional = true}
youconfigme = "^0.6.14"
flask = "^2.0.2"
flask-restx = "^0.2.0"
flask_script = "^2.0.6"
psycopg2-binary = "^2.8.6"
Flask-Cors = "^3.0.9"

[tool.poetry.dev-dependencies]
nox = "^2020.8.22"
pylint = "^2.6.0"
mypy = "^0.782"
flake8 = "^3.8.3"
black = "19.10b0"
pre-commit = "^2.7.1"
bandit = "^1.7.0"
bump2version = "^1.0.1"
isort = "^5.6.4"
pylint-flask = "^0.6"
coverage-badge = "^1.0.1"
coverage = "^5.5"

[tool.poetry.extras]
testing = ["pytest", "pytest-cov", "pytest-xdist"]

[tool.black]
line-length = 88
skip-string-normalization = true

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"
